style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap');

:root{
    --yellow: #E59500;
    --dark-yellow: #ad7000;
    --white: #fff;
    --red: #840032;
    --dark-red: #400019;
    --blue: #002642;
}

html{
    background-color: var(--blue);
    width: 100%;
    font-family: 'Montserrat', sans-serif;
    font-size: 62.5%;
}

body{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    min-height: 100%;
}

.red{
    background-color: var(--red);
}
.yellow{
    color: var(--yellow);
}

.white{
    color: var(--white);
}

h1{
    font-size: 12.8rem;
    font-weight: 700;
    line-height: 1;
}

h2{
    font-size: 3.2rem;
    font-weight: 600;
}

h3{
    font-size: 4.8rem;
    font-weight: 500;
}

#text p{
    font-size: 1.8rem;
}

.navbar{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-left: 24px;
    padding-right: 24px;
    margin: 0;
}

#nav-links{
    order: 0;
    font-size: 1.8rem;
}

#nav-button{
    order: 1;
}

.button{
    background-color: var(--yellow);
    border: 1px solid var(--red);
    border-radius: 4px;
    text-decoration: none;
    padding: 8px;
    font-size: 1.8rem;
}

#nav-links a{
    padding: 8px;
    padding-left: 12px;
    padding-right: 12px;
}

#nav-links a:link, #nav-links a:visited {
    color: var(--white);
    text-decoration: none;
}

#nav-links a:hover, #nav-links a:active {
    color:#aaaaaa;
    text-decoration: none;
}

a:link.button, a:visited.button{
    color: var(--red);
}

a:hover.button, a:active.button{
    color: var(--dark-red);
    background-color: var(--dark-yellow);
}


/* Content stuff*/

#text *{
    margin-bottom: 8px;
    margin-top: 8px;
}

.content{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    height: 80vh;
}

#text{
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    flex: 0 1 auto;
}

.content img{
    max-width: 40%;
    padding: 48px;
}


/* Footer stuff*/

footer{
    width: 100%;
    padding: 0;
    margin: 0;
    position: absolute;
    left: 0;
    bottom: 0;
    text-align: center;
}

footer p{
    font-size: 1.8rem;
}


/* Mobile stuff */

@media (max-width: 768px) {
    .content {
      flex-direction: column;
    }

    #nav-links{
        display: none;
    }
  }

  @media (max-width: 1200px) {
    #nav-links{
        display: none;
    }

    #nav-button{
        display: none;
    }

  }

